Fixed: Article heading too huge on mobile devices

--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -271,8 +271,8 @@
 }
 @media screen and (max-width: 568px) {
     #article__title {
-        font-size: calc(var(--vertical-grid-size) * 5px);
-        line-height: calc(var(--vertical-grid-size) * 7px);
+        font-size: calc(var(--vertical-grid-size) * 3px);
+        line-height: calc(var(--vertical-grid-size) * 5px);
     }
 }
 
